Mon Jan 29 10:23:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap_record::find_empty): Fix loop condition.

Sun Jan 28 19:40:40 2001  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (_link): Make sure that newpath does not exist.  Set
	errno if it does.

Sun Jan 28 19:29:08 2001  Christopher Faylor <cgf@cygnus.com>

	* cygheap.cc (init_cheap): Don't specify a load address for the heap.
	It doesn't work on #!*& Windows 9x.
	(cygheap_init): Move GetUserName to memory_init.
	* dcrt0.cc (dll_crt0_1): Call new memory_init functin, eliminate call
	to heap_init.
	* heap.cc (heap_init): Improve error output.
	* heap.h: Correct some declarations.
	* shared.cc (mount_table_init): Remove.
	(memory_init): Renamed from shared_init.  Reorganize to accomodate
	strange Windows 9x problems with cygheap/heap interaction.
	* shared_info.h: Rename shared_init to memory_init.

Sun Jan 28 01:25:33 2001  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump API version.

Sun Jan 28 01:18:22 2001  Christopher Faylor <cgf@cygnus.com>

	* cygheap.cc (init_cheap): Move username initialization.
	(cygheap_init): Here.
	* shared_info.h (mount_info): Add a sys_mount_table_counter field.
	(shared_info): Ditto.
	* path.cc (mount_info::conv_to_win32_path): Check that our mount table
	is in sync with the system mount table and reinitialize it if not.
	(mount_info::add_reg_mount): Bump sys_mount_table counters if the
	system mount table changes.
	(mount_info::del_reg_mount): Ditto.
	(mount_info::write_cygdrive_info_to_registry): Ditto.
	(mount_info::remove_cygdrive_info_from_registry): Ditto.

Sun Jan 28 00:28:30 2001  Christopher Faylor <cgf@cygnus.com>

	Throughout, change 'cygwin_shared.mount' to 'mount_table'.
	* child_info.h (child_info): Move shared_h, console_h to cygheap.  Add
	mount_h.
	* cygheap.h (init_cygheap): Add shared_h, console_h.
	* cygheap.cc (init_cheap): Initialize heap at a fixed location after