@@ -1,3 +1,8 @@
+Mon Jan 29 14:30:00 2001  Corinna Vinschen <corinna@vinschen.de>
+
+	* mmap.cc (mmap): Remove obsolete check for MAP_SHARED|MAP_ANON as
+	being invalid.
+
 Mon Jan 29 10:23:00 2001  Corinna Vinschen <corinna@vinschen.de>
 
 	* mmap.cc (mmap_record::find_empty): Fix loop condition.
